[package]
name = "rcu_128"
version = "0.1.7"
authors = ["Maverick Liu <maverick.liu42@gmail.com>"]
edition = "2021"
license = "MIT"
description = "RCU (Read-Copy-Update) implementation for platforms supporting atomic 128-bit operations."
keywords = ["rcu", "lockless", "atomic"]
categories = ["concurrency", "data-structures", "no-std"]
repository = "https://github.com/cyborg42/rcu_128.git"
readme = "README.md"
exclude = [".gitignore"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"